# cpwclient

./: .gitignore  INSTALL  README  configure.ac
src/: .gitignore  Makefile.am  cpwclient.c  cpwclient.gresource.xml  cpwclientprefs.h  cpwclientwin.h  org.gtk.cpwclient.gschema.xml  window.ui
